syntax = "proto3";

package iam.mfa.grpc.api.data;

option java_multiple_files = true;
option java_package = "com.example.tutorial.protos";
option java_outer_classname = "AddressBookProtos";


message Person {
  string id = 1;
  string name = 2;
  int32 age = 3;
  string  email = 4;
}


message PersonReceiver{
  string result = 1;
  string resultMessage = 2;
}


service PersonSender{
  rpc sendPerson(Person) returns (PersonReceiver);
}

